--- a/views/authenticated.ejs
+++ b/views/authenticated.ejs
@@ -1,6 +1,8 @@
 <div>
   <h1>You have been authenticated! </h1></br>
 	<a href="/account">Show user information</a></br>
-  <a href="/token">Token information (as example. Users should not get tokens by default!)</a>
+  <a href="/token">Token information (as example. Users should not get tokens by default!)</a></br>
+  <a href="/logout">logout</a>
+
 
 </div>
