--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,11 @@
-<div>
-	<a href="/auth/example">authenticate with idm</a>
-</div>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>AGILE IDM example</title>
+	</head>
+	<body>
+   <div>
+	   <a href="/auth/example">authenticate with idm</a>
+   </div>
+ </body>
+</html>
