--- a/views/authenticated.ejs
+++ b/views/authenticated.ejs
@@ -1,14 +1,38 @@
+
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>AGILE IDM example</title>
-	</head>
-	<body>
-    <div>
-     <h1>You have been authenticated! </h1><br>
-	   <a href="/account">Show user information</a><br>
-     <a href="/token">Token information (as example. Users should not get tokens by default!)</a><br>
-     <a href="/logout">logout</a>
-    </div>
-  </body>
+<head>
+<meta charset="UTF-8">
+<title>AGILE Client Example</title>
+<link href="/static/css/style.css" rel="stylesheet">
+<script type="text/javascript">
+</script>
+</head>
+<body>
+	<div id="container">
+		<nav>
+			<ul>
+				<li id="navIdmLi"><a id="navIdmA" href="/account"
+					target="content">My information</a>
+					<ul>
+						<li><a href="/account" target="content">Account information</a>
+							<ul>
+								<li><a href="/account" target="content">About me</a></li>
+								<li><a href="/token" target="content">Token</a></li>
+							</ul>
+							<li><a href="/logout">logout</a></li>
+					</ul>
+
+				</li>
+		</nav>
+
+	</div>
+	<div id="content" align="center">
+		 <iframe name="content"  width="100%"
+                        height="400px" id="iframeContent" marginheight="0" frameborder="0"
+                        scrolling="no"></iframe>
+
+	</div>
+
+</body>
 </html>
