--- a/views/authenticated.ejs
+++ b/views/authenticated.ejs
@@ -22,7 +22,17 @@
 							</ul>
 							<li><a href="/logout">logout</a></li>
 					</ul>
+					<li id="navIdmLi"><a id="navIdmA" href="/user_home"
+						target="content">Entities</a>
+						<ul>
+							<li><a >Users</a>
+								<ul>
+									<li><a href="/read_user" target="content">Read User</a></li>
+									<li><a href="/create_user" target="content">Create User</a></li>
+								</ul>
+						</ul>
 
+					</li>
 				</li>
 		</nav>
 
