--- a/views/authenticated.ejs
+++ b/views/authenticated.ejs
@@ -20,20 +20,31 @@
 								<li><a href="/account" target="content">About me</a></li>
 								<li><a href="/token" target="content">Token</a></li>
 							</ul>
-							<li><a href="/logout">logout</a></li>
+						<li><a href="/logout">logout</a></li>
 					</ul>
-					<li id="navIdmLi"><a id="navIdmA" href="/user_home"
+				</li>
+				<!-- end if info-->
+				<li id="navIdmLi"><a id="navIdmA" href="/read_entity"
 						target="content">Entities</a>
 						<ul>
-							<li><a >Users</a>
+							<li><a  href="/read_user"
+									target="content">Users</a>
 								<ul>
 									<li><a href="/read_user" target="content">Read User</a></li>
 									<li><a href="/create_user" target="content">Create User</a></li>
 								</ul>
+							</li>
+							<li><a  href="/read_entity"
+									target="content">Entities</a>
+								<ul>
+									<li><a href="/read_entity" target="content">Read Entity</a></li>
+									<li><a href="/create_entity" target="content">Create Entity</a></li>
+								</ul>
+							</li>
 						</ul>
-
-					</li>
 				</li>
+				<!-- end of entities-->
+			</ul>
 		</nav>
 
 	</div>
