add menus for entities and groups

--- a/views/find_group.ejs
+++ b/views/find_group.ejs
@@ -10,14 +10,14 @@
 </head>
 <body>
 	<div id="content" align="center">
-		<h1>Find User Information</h1>
+		<h1> <%= action %> group information</h1>
 		<div>
 		<form method="post">
 
-			 <label>id:</label>
-			 <input type="text" name="entity_id"/><br>
-			 <label>type: </label>
-		   <input type="text" name="entity_type"/><br>
+			 <label>owner:</label>
+			 <input type="text" name="owner"/><br>
+			 <label>name: </label>
+		   <input type="text" name="group_name"/><br>
 			 <input type="submit" value="Submit" />
 	</form>
 	</div>
