--- a/views/find_user.ejs
+++ b/views/find_user.ejs
@@ -10,14 +10,14 @@
 </head>
 <body>
 	<div id="content" align="center">
-		<h1>Find Entity Information</h1>
+		<h1> <%= action %> user information</h1>
 		<div>
 		<form method="post">
 
-			 <label>username:</label>
-			 <input type="text" name="user_name"/><br>
-			 <label>authentication type: </label>
-		   <input type="text" name="auth_type"/><br>
+			 <label>id:</label>
+			 <input type="text" name="entity_id"/><br>
+			 <label>type: </label>
+		   <input type="text" name="entity_type"/><br>
 			 <input type="submit" value="Submit" />
 	</form>
 	</div>
