--- a/views/authenticated.ejs
+++ b/views/authenticated.ejs
@@ -32,13 +32,17 @@
 								<ul>
 									<li><a href="/read_user" target="content">Read User</a></li>
 									<li><a href="/create_user" target="content">Create User</a></li>
+									<li><a href="/delete_user" target="content">Delete User</a></li>
 								</ul>
 							</li>
 							<li><a  href="/read_entity"
 									target="content">Entities</a>
 								<ul>
 									<li><a href="/read_entity" target="content">Read Entity</a></li>
-									<li><a href="/create_entity" target="content">Create Entity</a></li>
+							    <li><a href="/create_entity" target="content">Create Entity</a></li>
+									<li><a href="/delete_entity" target="content">Delete Entity</a></li>
+									<li><a href="/search_entity" target="content">Lookup Entity</a></li>
+
 								</ul>
 							</li>
 						</ul>
