create first api call to read users info from user api (not oauth2) include dependencies for this, and pass idm configuration to all route files.

--- a/views/find_user.ejs
+++ b/views/find_user.ejs
@@ -14,10 +14,10 @@
 		<div>
 		<form method="post">
 
-			 <label>id:</label>
-			 <input type="text" name="entity_id"/><br>
-			 <label>type: </label>
-		   <input type="text" name="entity_type"/><br>
+			 <label>username:</label>
+			 <input type="text" name="user_name"/><br>
+			 <label>authentication type: </label>
+		   <input type="text" name="auth_type"/><br>
 			 <input type="submit" value="Submit" />
 	</form>
 	</div>
