--- a/views/result.ejs
+++ b/views/result.ejs
@@ -13,7 +13,7 @@
 		<h1>Result for <%= action %> </h1>
 		<div>
 			<% for(var i=0; i<result.length; i++) { %>
-							<label><%= result[i].label %>:</label> <%= result[i].value %>
+							<label><%= result[i].label %>:</label> <%= result[i].value %><br>
 			<% } %>
 	</div>
 </div>
