create entity works now.

--- a/views/create_entity.ejs
+++ b/views/create_entity.ejs
@@ -3,9 +3,21 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Read User</title>
+<title>Create Entity</title>
 <link href="/static/css/style.css" rel="stylesheet">
 <script type="text/javascript">
+function addRow(){
+	    var form = document.getElementById("attribute_form");
+			var input1 = document.createElement("input");
+			var input2 = document.createElement("input");
+			 input1.type = "text";
+			 input1.name ="attribute_name";
+			 input2.type = "text";
+			 input2.name ="attribute_value";
+			 form.appendChild(input1);
+			 form.appendChild(input2);
+			 form.appendChild(document.createElement("br"));
+}
 </script>
 </head>
 <body>
@@ -13,12 +25,22 @@
 		<h1>Create Entity</h1>
 		<div>
 		<form method="post">
-
-			 <label>username:</label>
-			 <input type="text" name="user_name"/><br>
-			 <label>authentication type: </label>
-		   <input type="text" name="auth_type"/><br>
-			 <input type="submit" value="Submit" />
+			<div name = "id_info">
+			 <header><b>Id info</b></header><br>
+			 <label>entity id:</label>
+			 <input type="text" name="entity_id"/><br>
+			 <label>entity type: </label>
+ 			 <input type="text" name="entity_type"/><br>
+		 </div>
+		 <div name = "attribute_info">
+			 <br><header><b>Attribute info</b></header><br>
+			 <a href="javascript:addRow();" >Add attribute field</a><br>
+	 		 <label>attribute</label>&nbsp;<label>value</label><br>
+			 <div id="attribute_form">
+			 <input type="text" name="attribute_name"/><input type="text" name="attribute_value"/><br>
+        </div>
+		 </div>
+		 <input type="submit" value="Submit" />
 	</form>
 	</div>
 </div>
