--- a/views/find_entity.ejs
+++ b/views/find_entity.ejs
@@ -14,10 +14,10 @@
 		<div>
 		<form method="post">
 
-			 <label>username:</label>
-			 <input type="text" name="user_name"/><br>
-			 <label>authentication type: </label>
-		   <input type="text" name="auth_type"/><br>
+			 <label>entity type:</label>
+			 <input type="text" name="entity_type"/><br>
+			 <label>entity id: </label>
+		   <input type="text" name="entity_id"/><br>
 			 <input type="submit" value="Submit" />
 	</form>
 	</div>
