add group functionality to create and delete groups

--- a/views/authenticated.ejs
+++ b/views/authenticated.ejs
@@ -48,6 +48,14 @@
 						</ul>
 				</li>
 				<!-- end of entities-->
+				<li id="navIdmLi"><a id="navIdmA" href="/account"
+					target="content">Groups</a>
+					<ul>
+						<li><a href="/read_group" target="content">Read Group</a></li>
+						<li><a href="/create_group" target="content">Create Group</a></li>
+						<li><a href="/delete_group" target="content">Delete Group</a></li>
+					</ul>
+				</li>
 			</ul>
 		</nav>
 
