--- a/views/create_group.ejs
+++ b/views/create_group.ejs
@@ -3,22 +3,18 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Read User</title>
+<title>Create Group</title>
 <link href="/static/css/style.css" rel="stylesheet">
 <script type="text/javascript">
 </script>
 </head>
 <body>
 	<div id="content" align="center">
-		<h1> <%= action %> group information</h1>
+		<h1> Create group</h1>
 		<div>
 		<form method="post">
 
-			 <label>owner username:</label>
-			 <input type="text" name="owner"/><br>
-			 <label>owner authentication type:</label>
-			 <input type="text" name="auth_type"/><br>
-			 <label>group name:</label>
+			 <label>name: </label>
 		   <input type="text" name="group_name"/><br>
 			 <input type="submit" value="Submit" />
 	</form>
