include add and delete entities from groups

--- a/views/authenticated.ejs
+++ b/views/authenticated.ejs
@@ -54,6 +54,8 @@
 						<li><a href="/read_group" target="content">Read Group</a></li>
 						<li><a href="/create_group" target="content">Create Group</a></li>
 						<li><a href="/delete_group" target="content">Delete Group</a></li>
+						<li><a href="/add_entity_to_group" target="content">Add Entity to Group</a></li>
+						<li><a href="/remove_entity_from_group" target="content">Delete Entity to Group</a></li>
 					</ul>
 				</li>
 			</ul>
