update to include set attribute for entity

--- a/views/authenticated.ejs
+++ b/views/authenticated.ejs
@@ -40,6 +40,7 @@
 								<ul>
 									<li><a href="/read_entity" target="content">Read Entity</a></li>
 							    <li><a href="/create_entity" target="content">Create Entity</a></li>
+									<li><a href="/set_attribute_entity" target="content">Set Attribute for Entity</a></li>
 									<li><a href="/delete_entity" target="content">Delete Entity</a></li>
 									<li><a href="/search_entity" target="content">Lookup Entity</a></li>
 
