include password optional and role in the interface

--- a/views/create_user.ejs
+++ b/views/create_user.ejs
@@ -18,6 +18,10 @@
 			 <input type="text" name="user_name"/><br>
 			 <label>authentication type: </label>
 		   <input type="text" name="auth_type"/><br>
+			 <label>password (optional): </label>
+		   <input type="password" name="password"/><br>
+			 <label>role: </label>
+		   <input type="text" name="role"/><br>
 			 <input type="submit" value="Submit" />
 	</form>
 	</div>
