include examples for the extended API version. Now this version also lists all entities by type, lists all groups and can delete an attribute from an entity

--- a/views/authenticated.ejs
+++ b/views/authenticated.ejs
@@ -23,6 +23,15 @@
 						<li><a href="/logout">logout</a></li>
 					</ul>
 				</li>
+				<li id="navIdmLi"><a id="navIdmA" href="/list?what=entities"
+					target="content">List</a>
+					<ul>
+						  <li><a href="/list?what=user" target="content">List Users</a>
+							<li><a href="/list?what=sensor" target="content">List Sensors</a>
+							<li><a href="/list?what=client" target="content">List Clients</a>
+							<li><a href="/list?what=groups" target="content">List Groups</a>
+					</ul>
+				</li>
 				<!-- end if info-->
 				<li id="navIdmLi"><a id="navIdmA" href="/read_entity"
 						target="content">Entities</a>
@@ -41,6 +50,7 @@
 									<li><a href="/read_entity" target="content">Read Entity</a></li>
 							    <li><a href="/create_entity" target="content">Create Entity</a></li>
 									<li><a href="/set_attribute_entity" target="content">Set Attribute for Entity</a></li>
+									<li><a href="/delete_attribute_entity" target="content">Delete Entity's Attribute</a></li>
 									<li><a href="/delete_entity" target="content">Delete Entity</a></li>
 									<li><a href="/search_entity" target="content">Lookup Entity</a></li>
 
