rename wrongly named attribute templates.

--- a/views/delete_attribute.ejs
+++ b/views/delete_attribute.ejs
@@ -3,13 +3,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Set Attribute for Entity</title>
+<title>Delete Attribute for Entity</title>
 <link href="/static/css/style.css" rel="stylesheet">
 
 </head>
 <body>
 	<div id="content" align="center">
-		<h1>Set Attribute for Entity</h1>
+		<h1>Delete Attribute for Entity</h1>
 		<div>
 		<form method="post">
 			<div name = "id_info">
@@ -21,9 +21,9 @@
 		 </div>
 		 <div name = "attribute_info">
 			 <br><header><b>Attribute info</b></header><br>
-	 		 <label>attribute</label>&nbsp;<label>value</label><br>
+	 		 <label>attribute</label>
 			 <div id="attribute_form">
-			 <input type="text" name="attribute_name"/><input type="text" name="attribute_value"/><br>
+			 <input type="text" name="attribute_name"/><br>
         </div>
 		 </div>
 		 <input type="submit" value="Submit" />
