move to device from sensor as entity type. this is compatible with releases after v1.0.2 of agile-security

--- a/views/authenticated.ejs
+++ b/views/authenticated.ejs
@@ -27,7 +27,7 @@
 					target="content">List</a>
 					<ul>
 						  <li><a href="/list?what=user" target="content">List Users</a>
-							<li><a href="/list?what=sensor" target="content">List Sensors</a>
+							<li><a href="/list?what=device" target="content">List Devices</a>
 							<li><a href="/list?what=client" target="content">List Clients</a>
 							<li><a href="/list?what=groups" target="content">List Groups</a>
 					</ul>
